--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
     "react-fast-marquee": "^1.6.0",
     "react-modal-video": "^2.0.0",
     "swiper": "^9.2.4",
+    "three": "^0.164.1",
     "use-count-up": "^3.0.1",
+    "vanta": "^0.5.24",
     "wowjs": "^1.1.3"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.3"
   }
 }
